# bonass-soccer-all

./: .gitignore  Procfile  README.md  coolify.yaml  heroku.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  README.md  conftest.py  pyproject.toml
backend/auth_app/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/auth_app/management/commands/: create_superuser_if_not_exists.py
backend/auth_app/migrations/: 0001_initial.py
backend/auth_app/tests/: test_views.py
backend/config/: celery.py  settings.py  urls.py
backend/core/: email.py
backend/core/tests/: test_email.py
backend/evaluations/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/evaluations/migrations/: 0001_initial.py  0002_evaluationassignment.py
backend/evaluations/tests/: test_views.py
backend/players/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/players/migrations/: 0001_initial.py  0002_game_confirmed_at_game_status.py
backend/players/tests/: test_views.py
backend/poll/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/poll/migrations/: 0001_initial.py  0002_weeklypoll_hard_lock_weeklypoll_is_locked_and_more.py
backend/poll/tests/: test_views.py
docs/: PROJECT_BRIEF.md
frontend/: .env.example  Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: layout.tsx
frontend/app/(main)/dashboard/: page.tsx
frontend/app/(main)/evaluations/: page.tsx
frontend/app/(main)/polls/: page.tsx
frontend/app/(main)/profile/: page.tsx
frontend/app/(main)/teams/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/common/: Header.tsx  Loading.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts  auth.ts
infra/: .env.example  coolify-docker-compose.yml  coolify-pull.yml  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml
infra/k8s/: backend.yaml  frontend.yaml  namespace.yaml  postgres.yaml  redis.yaml
